_cache/v0.18.0/cmake/specs.md
---
title: "cmake"
layout: cache
categories: [package, v0.18.0]
meta: {"versions": ["3.23.1"], "compilers": ["gcc@=7.5.0", "gcc@=8.4.0"], "oss": ["ubuntu18.04"], "platforms": ["linux"], "targets": ["x86_64"], "stacks": ["build_systems", "data-vis-sdk", "e4s", "radiuss", "root", "tutorial"], "num_specs": 3, "num_specs_by_stack": {"build_systems": 1, "root": 3, "radiuss": 1, "e4s": 1, "tutorial": 2, "data-vis-sdk": 1}}
spec_details: [{"hash": "tulqz4nxor764kgeij23tfap4ddgpgvh", "compiler": "gcc@=7.5.0", "versions": ["3.23.1"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["build_type=Release", "~doc", "+ncurses", "+ownlibs", "~qt"], "stacks": ["build_systems", "root", "radiuss", "e4s", "tutorial"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.0/build_cache/linux-ubuntu18.04-x86_64/gcc-7.5.0/cmake-3.23.1/linux-ubuntu18.04-x86_64-gcc-7.5.0-cmake-3.23.1-tulqz4nxor764kgeij23tfap4ddgpgvh.spack"}, {"hash": "5xytpox7u2s7fijus5yvlnnwu5eark5r", "compiler": "gcc@=7.5.0", "versions": ["3.23.1"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["build_type=Release", "~doc", "+ncurses", "~ownlibs", "~qt"], "stacks": ["root", "data-vis-sdk"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.0/build_cache/linux-ubuntu18.04-x86_64/gcc-7.5.0/cmake-3.23.1/linux-ubuntu18.04-x86_64-gcc-7.5.0-cmake-3.23.1-5xytpox7u2s7fijus5yvlnnwu5eark5r.spack"}, {"hash": "ag23oxsvzs4h25x7lugr5yr237i6hnv6", "compiler": "gcc@=8.4.0", "versions": ["3.23.1"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["build_type=Release", "~doc", "+ncurses", "+ownlibs", "~qt"], "stacks": ["root", "tutorial"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.0/build_cache/linux-ubuntu18.04-x86_64/gcc-8.4.0/cmake-3.23.1/linux-ubuntu18.04-x86_64-gcc-8.4.0-cmake-3.23.1-ag23oxsvzs4h25x7lugr5yr237i6hnv6.spack"}]
---