_cache/v0.18.1/cmake/specs.md
---
title: "cmake"
layout: cache
categories: [package, v0.18.1]
meta: {"versions": ["3.23.1"], "compilers": ["gcc@=7.3.1", "gcc@=7.5.0", "gcc@=8.4.0"], "oss": ["amzn2", "ubuntu18.04"], "platforms": ["linux"], "targets": ["aarch64", "graviton2", "x86_64", "x86_64_v3", "x86_64_v4"], "stacks": ["aws-ahug", "aws-ahug-aarch64", "aws-isc", "aws-isc-aarch64", "build_systems", "data-vis-sdk", "e4s", "radiuss", "root", "tutorial"], "num_specs": 7, "num_specs_by_stack": {"root": 7, "aws-ahug": 2, "aws-isc": 2, "aws-ahug-aarch64": 2, "aws-isc-aarch64": 2, "e4s": 1, "build_systems": 1, "radiuss": 1, "tutorial": 2, "data-vis-sdk": 1}}
spec_details: [{"hash": "jlqn7ghaopb2sbyxpriy5uum3w64glqu", "compiler": "gcc@=7.3.1", "versions": ["3.23.1"], "os": "amzn2", "platform": "linux", "target": "x86_64_v4", "variants": ["build_type=Release", "~doc", "+ncurses", "+ownlibs", "~qt"], "stacks": ["root", "aws-ahug", "aws-isc"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-x86_64_v4/gcc-7.3.1/cmake-3.23.1/linux-amzn2-x86_64_v4-gcc-7.3.1-cmake-3.23.1-jlqn7ghaopb2sbyxpriy5uum3w64glqu.spack"}, {"hash": "bmwneljmso6eedd73gw5wjjxnfe5vs4x", "compiler": "gcc@=7.3.1", "versions": ["3.23.1"], "os": "amzn2", "platform": "linux", "target": "graviton2", "variants": ["build_type=Release", "~doc", "+ncurses", "+ownlibs", "~qt"], "stacks": ["root", "aws-ahug-aarch64", "aws-isc-aarch64"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-graviton2/gcc-7.3.1/cmake-3.23.1/linux-amzn2-graviton2-gcc-7.3.1-cmake-3.23.1-bmwneljmso6eedd73gw5wjjxnfe5vs4x.spack"}, {"hash": "tulqz4nxor764kgeij23tfap4ddgpgvh", "compiler": "gcc@=7.5.0", "versions": ["3.23.1"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["build_type=Release", "~doc", "+ncurses", "+ownlibs", "~qt"], "stacks": ["e4s", "build_systems", "root", "radiuss", "tutorial"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-ubuntu18.04-x86_64/gcc-7.5.0/cmake-3.23.1/linux-ubuntu18.04-x86_64-gcc-7.5.0-cmake-3.23.1-tulqz4nxor764kgeij23tfap4ddgpgvh.spack"}, {"hash": "l5lr7ykyecodbefv7yw56eb2ax2nfvmh", "compiler": "gcc@=7.3.1", "versions": ["3.23.1"], "os": "amzn2", "platform": "linux", "target": "x86_64_v3", "variants": ["build_type=Release", "~doc", "+ncurses", "+ownlibs", "~qt"], "stacks": ["root", "aws-ahug", "aws-isc"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-x86_64_v3/gcc-7.3.1/cmake-3.23.1/linux-amzn2-x86_64_v3-gcc-7.3.1-cmake-3.23.1-l5lr7ykyecodbefv7yw56eb2ax2nfvmh.spack"}, {"hash": "cx4wjav3sclhuuxquyoayh775tb662eb", "compiler": "gcc@=7.3.1", "versions": ["3.23.1"], "os": "amzn2", "platform": "linux", "target": "aarch64", "variants": ["build_type=Release", "~doc", "+ncurses", "+ownlibs", "~qt"], "stacks": ["root", "aws-ahug-aarch64", "aws-isc-aarch64"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-aarch64/gcc-7.3.1/cmake-3.23.1/linux-amzn2-aarch64-gcc-7.3.1-cmake-3.23.1-cx4wjav3sclhuuxquyoayh775tb662eb.spack"}, {"hash": "5xytpox7u2s7fijus5yvlnnwu5eark5r", "compiler": "gcc@=7.5.0", "versions": ["3.23.1"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["build_type=Release", "~doc", "+ncurses", "~ownlibs", "~qt"], "stacks": ["root", "data-vis-sdk"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-ubuntu18.04-x86_64/gcc-7.5.0/cmake-3.23.1/linux-ubuntu18.04-x86_64-gcc-7.5.0-cmake-3.23.1-5xytpox7u2s7fijus5yvlnnwu5eark5r.spack"}, {"hash": "ag23oxsvzs4h25x7lugr5yr237i6hnv6", "compiler": "gcc@=8.4.0", "versions": ["3.23.1"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["build_type=Release", "~doc", "+ncurses", "+ownlibs", "~qt"], "stacks": ["tutorial", "root"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-ubuntu18.04-x86_64/gcc-8.4.0/cmake-3.23.1/linux-ubuntu18.04-x86_64-gcc-8.4.0-cmake-3.23.1-ag23oxsvzs4h25x7lugr5yr237i6hnv6.spack"}]
---